	Interface); Anzeigedauer über RELOOK_TIMEOUT. Es wird leider nur eine
	kurze Zeile ohne Umlaute unterstützt. Vielen Dank an bolle fürs
	Testen.

	* if_jfritz.sh: CallMonitor-Schnittstelle wird nun automatisch
	aktiviert.

	* dial.sh: hangup-Funktion hinzugefügt (zum Abbrechen von
	Anwahlversuchen)

	* phonebook.sh: Call-by-Call-Vorwahlen (010...) erkennen und entfernen

2006-07-??:

	* net.sh: Ziemlich stark umgeschrieben, bitte testen. Die Umkodierung
	von Nachrichten wird jetzt vom System übernommen. Die Nachrichten (auf
	der Kommandozeile oder von default_*) werden in Latin-1 erwartet.

2006-07-07:

	* phonebook.sh: Suchreihenfolge geändert: Erst dauerhaftes, dann
	flüchtiges Telefonbuch (fehlgeschlagene Rückwärtssuchen hatten
	spätere Callers-Einträge verdeckt)

2006-07-08:

	callmonitor-1.5 veröffentlicht

2006-09-10:

	* reverse.sh: weristdran.de hat den Rückwärtssuche-Service
	eingestellt.

	* mail: Bei leerem Benutzernamen oder Passwort die entsprechenden
	Optionen weglassen (Fehler bei T-Online; Dank an dbox2freak)

	callmonitor-1.5.1 veröffentlicht

2006-09-23:

	* roku.sh: Funktionen für Roku SoundBridge: sbmessage zeigt eine Zeile
	statischen Text an (mit SB_TIMEOUT kann die Dauer beeinflusst werden),
	sbmarquee zeigt wiederholt einen Lauftext an (SB_TIMES bestimmt, wie
	oft).

	* rc.callmonitor: Callers und Listeners bei Initialisierung anlegen,
	falls nicht vorhanden

2006-09-27:

	* reverse.sh: dasoertliche.de hat seine Webseiten umgestellt;
	Anpassung

2006-09-29:

	* reverse.sh: www.dastelefonbuch.de und www.goyellow.de als neue
	Rückwärtssuche-Provider

2006-09-30:

	callmonitor-1.6 veröffentlicht

2006-10-01:

	* dboxlcd.sh: Behebung eines dummen Fehlers bei internen Umstellungen
	(Danke an Obi)

	callmonitor-1.6.1 bereitgestellt

2006-10-02:

	* reverse.sh: Neuer Rückwärtssuche-Provider 11880; zusätzliche
	Fallback-Suche nur nach Vorwahlen (bei Google)

2006-10-08:

	callmonitor 1.7 veröffentlicht